--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Mohammad Burhan</title>
+	<title>Vaanya Gupta</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -42,10 +42,10 @@
 					<label class="toggle-btn mx-auto mb-0" for="darkmode"></label>
 					<hr>
 
-				</div><!--//dark-mode-toggle-->
+				</div>//dark-mode-toggle
 				<div class="force-overflow">
-					<h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html">Mohammad
-							Burhan</a></h1>
+					<h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html">Vaanya
+							Gupta</a></h1>
 
 					<nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -60,26 +60,21 @@
 								<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png"
 									alt="image">
 
-								<div class="bio mb-3">Hi, my name is Mohammad Burhan and I'm a software engineer.
+								<div class="bio mb-3">Hi, my name is Vaanya Gupta and I'm a security engineer.
 									Welcome to my
 									personal website!</div><!--//bio-->
 								<ul class="social-list list-inline py-2 mx-auto">
 									<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a>
 									</li>
 									<li class="list-inline-item"><a
-											href="https://www.linkedin.com/in/burhanmohammad/"><i
+											href="https://www.linkedin.com/in/vaanyag/"><i
 												class="fab fa-linkedin-in fa-fw"></i></a></li>
-									<li class="list-inline-item"><a href="https://github.com/BurhanMohammad"><i
+									<li class="list-inline-item"><a href="https://github.com/vaanyag"><i
 												class="fab fa-github-alt fa-fw"></i></a></li>
-									<li class="list-inline-item"><a href="#"><i
-												class="fab fa-stack-overflow fa-fw"></i></a>
-									</li>
-									<li class="list-inline-item"><a href="https://wa.me/917036037203"><i
+									<li class="list-inline-item"><a href="https://wa.me/+14152150834"><i
 												class="fa-brands fa-whatsapp"></i></a></li>
-									<li class="list-inline-item"><a href="https://github.com/BurhanMohammad"><i
-												class="fa-brands fa-github"></i></a></li>
-									<li class="list-inline-item"><a href="https://join.skype.com/invite/yjbxl233XgfF"><i
-												class="fa-brands fa-skype"></i></a></li>
+									<li class="list-inline-item"><a href="https://devpost.com/vaanyag"><i
+												class="fa-brands fa-devpost"></i></a></li>
 
 								</ul><!--//social-list-->
 
