--- a/index.html
+++ b/index.html
@@ -145,14 +145,9 @@
 				<div class="profile-teaser row">
 
 					<div class="col">
-						<h2 class="name font-weight-bold mb-1">Mohammad Burhan</h2>
-						<div class="tagline mb-3">Software Engineer | Developer | Full-Stack</div>
-						<div class="bio mb-4">I'm a software engineer specialised in frontend and backend development
-							for complex scalable web apps. I write about software development on <a class="text-link"
-								href="blog-home.html">my blog</a>. Check out
-							my project <a class="text-link" href="portfolio.html">portfolio</a> and <a class="text-link"
-								href="resume.html">online resume</a>.
-						</div><!--//bio-->
+						<h2 class="name font-weight-bold mb-1">Vaanya Gupta</h2>
+						<div class="tagline mb-3">Security Engineer | Software Engineer | Developer</div>
+						<!--//bio-->
 						<div class="mb-4">
 							<a class="btn btn-primary me-2 mb-3" href="portfolio.html"><i
 									class="fas fa-arrow-alt-circle-right me-2"></i><span
