--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 	<div class="main-wrapper">
-		<section class="about-me-section p-3 p-lg-5 theme-bg-light">
+		<section class="about-me-section p-3 p-lg-5 theme-bg-dark">
 			<header class="header text-center">
 				<div class="dark-mode-toggle">
 					<hr class="mb-4">
