--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
    	<ul class="intro-social">        
          <li><a href="#"><i class="fa fa-github"></i></a></li>
-         <li><a href="#"><i class="fa fa-devpost"></i></a></li>
+         <li><a href="#"><i class="fa fa-linkedIn"></i></a></li>
          <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -263,6 +263,16 @@
 	<!-- Work Exp Section
    ================================================== -->
    <section id="Work Experience" class="grey-section">
+
+	<div class="row section-intro">
+		<div class="col-twelve">
+
+			<h3>More of my credentials.</h3>
+
+			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+
+		</div>   		
+	</div> <!-- /section-intro-->  		
 	
 	   <div class="row resume-timeline">
 
