--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Education</a></li>
-						<li><a class="smoothscroll"  href="#Work Experience" title="">Work Experience</a></li>
+						<li><a class="smoothscroll"  href="#work" title="">Work Experience</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Projects</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
@@ -262,93 +262,77 @@
 
 	<!-- Work Exp Section
    ================================================== -->
-   <section id="Work Experience" class="grey-section">
 
-	<div class="row section-intro">
-		<div class="col-twelve">
+	<section id="work" class="grey-section">
 
-			<h3>More of my credentials.</h3>
+		<div class="row section-intro">
+   		<div class="col-twelve">
 
-			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<h3>More of my credentials.</h3>
 
-		</div>   		
-	</div> <!-- /section-intro-->  		
-	
+   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+
+   		</div>   		
+   	</div> <!-- /section-intro--> 
+
 	   <div class="row resume-timeline">
 
-	   <div class="col-twelve resume-header">
+		<div class="col-twelve resume-header">
 
-		   <h2>Work Experience</h2>
+			<h2>Education.</h2>
 
-	   </div> <!-- /resume-header -->
+		</div> <!-- /resume-header -->
 
-	   <div class="col-twelve">
 
-		   <div class="timeline-wrap">
+		<div class="col-twelve">
 
-			   <div class="timeline-block">
+			<div class="timeline-wrap">
 
-				   <div class="timeline-ico">
-					   <i class="fa fa-graduation-cap"></i>
-				   </div>
+				<div class="timeline-block">
 
-				   <div class="timeline-header">
-					   <h3>UI Designer</h3>
-					   <p>July 2015 - Present</p>
-				   </div>
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
 
-				   <div class="timeline-content">
-					   <h4>Awesome Studio</h4>
-					   <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-				   </div>
+					<div class="timeline-header">
+						<h3>Master Degree</h3>
+						<p>Aug 2021 - Dec 2022</p>
+					</div>
 
-			   </div> <!-- /timeline-block -->
+					<div class="timeline-content">
+						<h2>Carnegie Mellon University</h2>
+						<h4>Information Technology - Information Security</h4>
+						<p>Course Work: </p>
+					</div>
 
-			   <div class="timeline-block">
+				</div> <!-- /timeline-block -->
 
-				   <div class="timeline-ico">
-					   <i class="fa fa-graduation-cap"></i>
-				   </div>
+				<div class="timeline-block">
 
-				   <div class="timeline-header">
-					   <h3>Front-end Developer</h3>
-					   <p>July 2014 - June 2015</p>
-				   </div>
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
 
-				   <div class="timeline-content">
-					   <h4>Super Cool Agency</h4>
-					   <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-				   </div>
+					<div class="timeline-header">
+						<h3>Bachelor Degree</h3>
+						<p>Sept 2018 - July 2021</p>
+					</div>
 
-			   </div> <!-- /timeline-block -->
+					<div class="timeline-content">
+						<h2>University of California Irvine</h2>
+						<h4>Computer Science with specialization in Intelligent Systems</h4>
+						<p>Course work: </p>
+					</div>
 
-			   <div class="timeline-block">
+				</div> <!-- /timeline-block -->
 
-				   <div class="timeline-ico">
-					   <i class="fa fa-graduation-cap"></i>
-				   </div>
+			</div> <!-- /timeline-wrap -->   			
 
-				   <div class="timeline-header">
-					   <h3>Web Designer</h3>
-					   <p>May 2013 - June 2014</p>
-				   </div>
-
-				   <div class="timeline-content">
-					   <h4>Great Designs Studio</h4>
-					   <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-				   </div>
-
-			   </div> <!-- /timeline-block -->
-
-		   </div> <!-- /timeline-wrap -->   			
-
-	   </div> <!-- /col-twelve -->
-	   
-   	   </div> <!-- /resume-timeline -->
-   
-   
-	
-</section> <!-- /features -->
+		</div> <!-- /col-twelve -->
+		
+	</div> <!-- /resume-timeline -->
+		
+	</section> <!-- /features -->
 
 
 	<!-- CTA Section
