--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Blockchain Security Engineer, Capstone Project</h3>
+	   					<h3>Blockchain Security Engineer</h3>
 	   					<p>Aug 2022 - Dec 2022</p>
 	   				</div>
 
