--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Radware</h4>
+	   					<h3>Radware</h3>
+						<h4>Mahwah, New Jersey</h4>
 	   					<p>vLorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do</p>
 	   				</div>
 
@@ -241,7 +242,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>SLAC, Stanford University</h4>
+	   					<h3>SLAC, Stanford University</h3>
+						<h4>Stanford, California</h4>
 	   					<p>Created a blockchain-based identity provisioning and verification system under the 
 							GISMo (Grid Integration, Systems, and Mobility) research group using Golang and a 
 							Node JS application for a self-deployed Hyperledger Fabric blockchain network</p>
@@ -261,7 +263,8 @@
 					</div>
 
 					<div class="timeline-content">
-						<h4>Amazon</h4>
+						<h3>Amazon</h3>
+						<h4>Mahattan, New York</h4>
 						<p>Developed a Canary Test Alert Framework for application security SAST detections. 
 							The canary tests are vulnerable application code for BOSCO and GQL rules that ensure 
 							that the security detections are working correctly and downstream reporting system is 
@@ -284,7 +287,8 @@
 					</div>
 
 					<div class="timeline-content">
-						<h4>Iris Software Inc.</h4>
+						<h3>Iris Software Inc.</h3>
+						<h4>Noida, India</h4>
 						<p>Developed OCR for scanned PDF text extraction and model building for intent detection 
 							in Python to help the customer get details from the pdf without any hassle. Designed a 
 							utility using Python to extract emails and make subsequent changes in data to 
