--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/1.jpg" alt="Web Search Engine">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <!-- <h3 class="folio-title">Liberty</h3>	     					     -->
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Information Retrieval
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
