--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/1.jpg" alt="Web Search Engine">
+	               	<img src="images/portfolio/1.png" alt="Web Search Engine">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
