--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/1.png" alt="Web Search Engine">
+	               	<img src="images/portfolio/WebSearch.png" alt="Web Search Engine">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <!-- <h3 class="folio-title">Liberty</h3>	     					     -->
-		     					    	 <span class="folio-types">
+		     					       <h3 class="folio-title">Information Retrieval</h3>	     					    
+		     					    	 <!-- <span class="folio-types">
 		     					       	  Information Retrieval
-		     					       </span>
+		     					       </span> -->
 		     					   </div>	                      	
 	                     </div>                    
 	                  </a>
@@ -352,14 +352,14 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/MISP.png" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
-		     					    	<span class="folio-types">
+	                     		<h3 class="folio-title">Intrution Detection</h3>	     					    
+		     					    	<!-- <span class="folio-types">
 		     					       	  Web Design
-		     					      </span>		     		
+		     					      </span>		     		 -->
 		     					   </div> 	                      	
 	                     </div>                    
 	                  </a>
@@ -368,14 +368,14 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/malloc.png"alt="Clouds">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
-		     					    	<span class="folio-types">
+	                     		<h3 class="folio-title">Computer Systems</h3>	     					    
+		     					    	<!-- <span class="folio-types">
 		     					       	  Web Design
-		     					      </span>		     		
+		     					      </span>		     		 -->
 		     					   </div> 	                      	
 	                     </div>                    
 	                  </a>
@@ -384,14 +384,14 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/portfolio/cache.png" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
-		     					    	<span class="folio-types">
+	                     		<h3 class="folio-title">Computer Systems</h3>	     					    
+		     					    	<!-- <span class="folio-types">
 		     					       	  Branding
-		     					      </span>		     		
+		     					      </span>		     		 -->
 		     					   </div>  	                      	
 	                     </div>                    
 	                  </a>
