--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 
    		<div class="col-twelve section-ads">  
 
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
+	     		<h2 class="h01">Hackathons.</a></h2>
 
 		      <p class="lead">
 		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
@@ -582,8 +582,18 @@
 				</p>
 
 				<div class="action">
-			      <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
-		      </div>		     	
+			      <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">View Project</a>
+		      </div>		
+			  
+			  <p class="lead">
+				Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
+				  Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
+				  <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
+				  </p>
+  
+				  <div class="action">
+					<a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">View Project</a>
+				</div>		
 
    		</div>
 
@@ -717,55 +727,7 @@
 		<div class="row">
 			<div class="col-twelve">
 
-				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-pencil-ruler"></i>
-						</div>
-
-						<h3 class="stat-count">
-							1500
-						</h3>
-
-						<h5 class="stat-title">
-							Projects Completed
-						</h5>
-
-					</div> <!-- /stat -->					
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-users"></i>
-						</div>
-
-						<h3 class="stat-count">
-							900
-						</h3>
-
-						<h5 class="stat-title">
-							Happy Clients
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-badge"></i>
-						</div>
-
-						<h3 class="stat-count">
-							200
-						</h3>
-
-						<h5 class="stat-title">
-							Awards Received
-						</h5>
-
-					</div> <!-- /stat -->									
+				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">							
 
 					<div class="bgrid stat">
 
@@ -774,7 +736,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							120
+							1000
 						</h3>
 
 						<h5 class="stat-title">
@@ -806,7 +768,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							7200
+							720000
 						</h3>
 
 						<h5 class="stat-title">
@@ -832,8 +794,6 @@
 
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
-
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
@@ -896,9 +856,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            San Jose, CA<br>
+            95134 US
             </p>
 
    		</div>
@@ -911,8 +870,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
+   			<p>vaanyag9@gmail.com<br>
+			   	vaanyag@alumni.cmu.edu			     
 			   </p>
 
    		</div>
@@ -925,9 +884,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+   			<p>Phone: +1 (415)-215-0834
 			   </p>
 
    		</div>
@@ -939,35 +896,6 @@
 
    <!-- footer
    ================================================== -->
-
-   <footer>
-     	<div class="row">
-
-     		<div class="col-six tab-full pull-right social">
-
-     			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-			   </ul> 
-	      		
-	      </div>
-
-      	<div class="col-six tab-full">
-	      	<div class="copyright">
-		        	<span>© Copyright Kards 2016.</span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>	         	
-		         </div>		                  
-	      	</div>
-
-	      	<div id="go-top">
-		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
-		      </div>
-
-      	</div> <!-- /row -->     	
-   </footer>  
 
    <div id="preloader"> 
     	<div id="loader"></div>
