--- a/index.html
+++ b/index.html
@@ -575,9 +575,11 @@
 
 	     		<h2 class="h01">Hackathons.</a></h2>
 
+				 <h3>HACK UCI - Winner of Education Hack</h3>
 		      <p class="lead">
-		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
+				Created a software that presents a summary of audio videos using <span>Google Cloud Platform and NLTK</span> 
+				(for sentimental analysis and text summary) that was successful to ease students' stress of making lecture notes.
+				Collaborated with two software engineers and won the <span>first place</span> under the education category among <span>89 teams</span>.
 				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
 				</p>
 
