--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
 						<h3>Iris Software Inc.</h3>
 						<h4>Noida, India</h4>
 						<p>Developed OCR for scanned PDF text extraction and model building for intent detection 
-							in Python to help the customer get details from the pdf without any hassle. Designed a 
+							in Python to help the customer get details from the pdf without any hassle. <br>Designed a 
 							utility using Python to extract emails and make subsequent changes in data to 
-							ease manager's stress of downloading files and making changes manually. Built a regular 
+							ease manager's stress of downloading files and making changes manually. <br>Built a regular 
 							expression builder to parse unstructured data, and Airflow Orchestration Implementation with
 							 minimal supervision, and with great technical finesse resulting in efficiency and positive 
-							 customer feedback. Gained experience to work and communicate one-on-one with clients.</p>
+							 customer feedback. <br>Gained experience to work and communicate one-on-one with clients.</p>
 					</div>
 
 
@@ -575,7 +575,7 @@
 
 	     		<h2 class="h01">Hackathons.</a></h2>
 
-				 <h3>HACK UCI - Winner of Education Hack</h3>
+				 <h5>HACK UCI - Winner of Education Hack</h5>
 		      <p class="lead">
 				Created a software that presents a summary of audio videos using <span>Google Cloud Platform and NLTK</span> 
 				(for sentimental analysis and text summary) that was successful to ease students' stress of making lecture notes.
@@ -584,17 +584,18 @@
 				</p>
 
 				<div class="action">
-			      <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">View Project</a>
+			      <a class="button button-primary large" href="https://devpost.com/software/lecture-summary-generator">View Project</a>
 		      </div>		
-			  
+			  <h5>H.A.R.D Hack - 3rd position under Northrup Grumman group</h5>
 			  <p class="lead">
-				Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-				  Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				  <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
+				Worked with 3 software engineers to build a robot in less than 24 hours using components from a <span>Qualcomm Kit, 
+					Northrup Grumman Kit, Arduino</span> and won the <span>3rd place among 21 teams</span> under <span>Northrup 
+					Grumman group</span>. Successful in <span>navigating through obstacles</span> while searching for 
+					the source of a variable EM signal.
 				  </p>
   
 				  <div class="action">
-					<a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">View Project</a>
+					<a class="button button-primary large" href="https://devpost.com/software/the-pirate-rover">View Project</a>
 				</div>		
 
    		</div>
