--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 	   				<div class="timeline-content">
 	   					<h3>Radware</h3>
 						<h4>Mahwah, New Jersey</h4>
-	   					<p>vLorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do</p>
+	   					<p>• Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -244,7 +244,7 @@
 	   				<div class="timeline-content">
 	   					<h3>SLAC, Stanford University</h3>
 						<h4>Stanford, California</h4>
-	   					<p>Created a blockchain-based identity provisioning and verification system under the 
+	   					<p>• Created a blockchain-based identity provisioning and verification system under the 
 							GISMo (Grid Integration, Systems, and Mobility) research group using Golang and a 
 							Node JS application for a self-deployed Hyperledger Fabric blockchain network</p>
 	   				</div>
@@ -265,10 +265,10 @@
 					<div class="timeline-content">
 						<h3>Amazon</h3>
 						<h4>Mahattan, New York</h4>
-						<p>Developed a Canary Test Alert Framework for application security SAST detections. 
+						<p>• Developed a Canary Test Alert Framework for application security SAST detections. 
 							The canary tests are vulnerable application code for BOSCO and GQL rules that ensure 
 							that the security detections are working correctly and downstream reporting system is 
-							operational. Deployed 67 canary tests with 100% coverage and successfully detected 
+							operational. <br>• Deployed 67 canary tests with 100% coverage and successfully detected 
 							issues in the operational system that lead to a COE and detection of 9,647 unique packages 
 							with high severity.</p>
 					</div>
@@ -289,13 +289,13 @@
 					<div class="timeline-content">
 						<h3>Iris Software Inc.</h3>
 						<h4>Noida, India</h4>
-						<p>Developed OCR for scanned PDF text extraction and model building for intent detection 
-							in Python to help the customer get details from the pdf without any hassle. <br>Designed a 
+						<p>• Developed OCR for scanned PDF text extraction and model building for intent detection 
+							in Python to help the customer get details from the pdf without any hassle. <br>• Designed a 
 							utility using Python to extract emails and make subsequent changes in data to 
-							ease manager's stress of downloading files and making changes manually. <br>Built a regular 
+							ease manager's stress of downloading files and making changes manually. <br>• Built a regular 
 							expression builder to parse unstructured data, and Airflow Orchestration Implementation with
 							 minimal supervision, and with great technical finesse resulting in efficiency and positive 
-							 customer feedback. <br>Gained experience to work and communicate one-on-one with clients.</p>
+							 customer feedback. <br>• Gained experience to work and communicate one-on-one with clients.</p>
 					</div>
 
 
@@ -575,7 +575,7 @@
 
 	     		<h2 class="h01">Hackathons.</a></h2>
 
-				 <h5>HACK UCI - Winner of Education Hack</h5>
+				 <h3>HACK UCI - Winner of Education Hack</h3>
 		      <p class="lead">
 				Created a software that presents a summary of audio videos using <span>Google Cloud Platform and NLTK</span> 
 				(for sentimental analysis and text summary) that was successful to ease students' stress of making lecture notes.
@@ -585,8 +585,9 @@
 
 				<div class="action">
 			      <a class="button button-primary large" href="https://devpost.com/software/lecture-summary-generator">View Project</a>
-		      </div>		
-			  <h5>H.A.R.D Hack - 3rd position under Northrup Grumman group</h5>
+		      </div>	
+			  <br>	
+			  <h3>H.A.R.D Hack - 3rd position under Northrup Grumman group</h3>
 			  <p class="lead">
 				Worked with 3 software engineers to build a robot in less than 24 hours using components from a <span>Qualcomm Kit, 
 					Northrup Grumman Kit, Arduino</span> and won the <span>3rd place among 21 teams</span> under <span>Northrup 
