--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-github"></i></a></li>
-         <li><a href="#"><i class="fa fa-devpost"></i></a></li>
-         <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://github.com/vaanyag"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/vaanyag"><i class="fa fa-linkedin-square"></i></a></li>
+         <li><a href="https://devpost.com/vaanyag"><i class="fa fa-globe"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -765,7 +763,7 @@
 		<div class="row">
 			<div class="col-twelve">
 
-				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">							
+				<div class="block-s-1-3 block-tab-1-2 block-mob-full stats-list">							
 
 					<div class="bgrid stat">
 
