--- a/index.html
+++ b/index.html
@@ -758,67 +758,69 @@
 
 	<!-- stats Section
    ================================================== -->
-	<section id="stats" class="count-up">
+   <section id="stats" class="count-up">
 
-		<div class="row">
-			<div class="col-twelve">
+	<div class="row">
+		<div class="col-twelve">
 
-				<div class="block-s-1-3 block-tab-1-2 block-mob-full stats-list">							
+			<div class="block-1-3 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
 
-					<div class="bgrid stat">
+				
+				<div class="bgrid stat">
 
-						<div class="icon-part">
-							<i class="icon-light-bulb"></i>
-						</div>
+					<div class="icon-part">
+						<i class="icon-light-bulb"></i>
+					</div>
 
-						<h3 class="stat-count">
-							1000
-						</h3>
+					<h3 class="stat-count">
+						80
+					</h3>
 
-						<h5 class="stat-title">
-							Crazy Ideas
-						</h5>
+					<h5 class="stat-title">
+						Crazy Ideas
+					</h5>
 
-					</div> <!-- /stat -->
+				</div> <!-- /stat -->
 
-					<div class="bgrid stat">
+				<div class="bgrid stat">
 
-						<div class="icon-part">
-							<i class="icon-cup"></i>
-						</div>
+					<div class="icon-part">
+						<i class="icon-cup"></i>
+					</div>
 
-						<h3 class="stat-count">
-							1500
-						</h3>
+					<h3 class="stat-count">
+						150
+					</h3>
 
-						<h5 class="stat-title">
-							Coffee Cups
-						</h5>
+					<h5 class="stat-title">
+						Coffee Cups
+					</h5>
 
-					</div> <!-- /stat -->
+				</div> <!-- /stat -->
 
-					<div class="bgrid stat">
+				<div class="bgrid stat">
 
-						<div class="icon-part">
-							<i class="icon-clock"></i>
-						</div>
+					<div class="icon-part">
+						<i class="icon-clock"></i>
+					</div>
 
-						<h3 class="stat-count">
-							720000
-						</h3>
+					<h3 class="stat-count">
+						720
+					</h3>
 
-						<h5 class="stat-title">
-							Hours
-						</h5>
+					<h5 class="stat-title">
+						Hours
+					</h5>
 
-					</div> <!-- /stat -->
+				</div> <!-- /stat -->
 
-				</div> <!-- /stats-list -->
+			</div> <!-- /stats-list -->
 
-			</div> <!-- /twelve -->
-		</div> <!-- /row -->
+		</div> <!-- /twelve -->
+	</div> <!-- /row -->
 
-	</section> <!-- /stats -->
+</section> <!-- /stats -->
+
 
 	
    <!-- contact
