--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Education</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Work Experience</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Projects</a></li>					
+						<li><a class="smoothscroll"  href="#resume" title="">Work Experience</a></li>
+						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>	
+						<li><a class="smoothscroll"  href="#cta" title="">Hackathons</a></li>				
+						<li><a class="smoothscroll"  href="#services" title="">Leadership Experience</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
@@ -773,7 +775,7 @@
 					</div>
 
 					<h3 class="stat-count">
-						80
+						1000
 					</h3>
 
 					<h5 class="stat-title">
@@ -789,7 +791,7 @@
 					</div>
 
 					<h3 class="stat-count">
-						150
+						1500
 					</h3>
 
 					<h5 class="stat-title">
@@ -805,7 +807,7 @@
 					</div>
 
 					<h3 class="stat-count">
-						720
+						72000
 					</h3>
 
 					<h5 class="stat-title">
