--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          <li><a href="https://github.com/vaanyag"><i class="fa fa-github"></i></a></li>
          <li><a href="https://www.linkedin.com/in/vaanyag"><i class="fa fa-linkedin-square"></i></a></li>
          <li><a href="https://devpost.com/vaanyag"><i class="fa fa-globe"></i></a></li>
-		 <li><a href="vaanyag9@gmail.com"><i class="fa fa-envelope"></i></a></li>
+		 <li><a href="mailto:vaanyag9@gmail.com"><i class="fa fa-envelope"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
